--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="padding:0; margin: 0; ">
    <img src="main_top_bg.jpg" style="height: 170px;">
    <h1 style="text-align: center; margin-top: 100px; margin-bottom: 0; font-family: serif; ">우리 결혼합니다</h1><br>
-   <h2 style="text-align: center; margin:0; font-family: sans-serif; color: rgb(112, 180, 11); font-size:36px; font-weight: 100; ">12 / 24</h2> <br>
+   <h2 style="text-align: center; margin:0; font-family: sans-serif; color: blue ; font-size:36px; font-weight: 100; ">12 / 24</h2> <br>
    <h3 style="text-align: center; margin-top: 100px; margin-bottom: 0; font-family: serif; ">백경찬 * 전윤미</h3> <br>
    <p style="text-align: center; font-family: serif; ">2020.12.24 SAT 12:00 PM <br>
       소풍컨벤션웨딩 7층 라온제나홀</p>
